<resources>
    <string name="app_name">DUBSTEP.FM</string>

    <string name="action_settings">Settings</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="description">DUBSTEP.FM</string>

    <string name="b24kbps">24 kbps</string>
    <string name="b64kbps">64 kbps</string>
    <string name="b128kbps">128 kbps</string>
    <string name="b256kbps">256 kbps</string>
    <string name="choose_bitrate">Choose bitrate</string>
    <string name="error">Radio error</string>
    <string name="loading">Loading…</string>
    <string name="nothing_to_play">TAP PLAY TO WUB</string>
    <string name="now_playing">Now playing:</string>
    <string name="gathering_info">Collecting info…</string>
    <string name="connecting">Trying to connect…</string>
    <string name="question_to_consent">Report errors to server?</string>
    <string name="privacy_policy"><a href="http://sites.google.com/view/dubstep-fm-app-privacy-policy">Privacy policy</a></string>
    <string name="privacy_policy_text">Application using advertising ID of application and impersonal
        device parameters to show errors to the server. It helps to improve the quality of the application.
        Here is the <a href="http://sites.google.com/view/dubstep-fm-app-privacy-policy">PRIVACY POLICY</a>. If you agree to this, click AGREE.
        You can change it later in settings</string>
    <string name="agree">Agree</string>
    <string name="disagree">Disagree</string>
    <string name="send_errors_to_server">Send errors to server</string>
    <string name="logo_content_desc">Dubstep.fm logo</string>
    <string name="initial_status">Nothing is playing</string>


    <string name="channel_name">Playback notifications</string>
    <string name="channel_description">Notifications about playback and playback buttons</string>
</resources>
